examples/oso/router-path-example/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oso-demo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webbox
    spec:
      containers:
        - name: webbox
          image: eduardopax/webbox:v3
          ports:
            - name: oso-demo-port
              containerPort: 8080
