examples/oso/router-path-example/service2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oso-demo-2
  name: oso-demo-2-service
spec:
  ports:
    - name: oso-demo-2
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: webbox2
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
